# tapeit

./: .gitignore  CLAUDE.md  README.md  index.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/audio/: capture.rs  mod.rs
src-tauri/src/capture/: mod.rs  recorder.rs  sources.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/encoder/: mod.rs  video.rs
src-tauri/src/utils/: mod.rs
src/components/overlay/: OverlayPanel.tsx
src/components/recorder/: AudioControls.tsx  RecorderPanel.tsx  SourcePicker.tsx  Timer.tsx
src/stores/: recorder.ts
src/styles/: global.css  overlay.css  recorder.css
src/utils/: format.ts
