[package]
name = "tapeit"
version = "0.1.0"
description = "Ultra-lightweight screen recorder"
authors = ["Tapeit"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"

# Screen capture (cross-platform)
scap = "0.0.8"

# Audio capture
cpal = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
# Pin to <1.5 to stay compatible with scap 0.0.8's API usage
windows-capture = ">=1.3.6, <1.5.0"
windows = { version = "0.58", features = [
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Media_Audio",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
